Make list menu non-resizable and modal

--- a/client/src/main/resources/client/scenes/ListMenu.fxml
+++ b/client/src/main/resources/client/scenes/ListMenu.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="277.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ListMenuCtrl">
+<AnchorPane minHeight="300.0" minWidth="240.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ListMenuCtrl">
    <children>
-      <VBox prefHeight="273.0" prefWidth="215.0">
+      <VBox AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
             <Label alignment="CENTER" prefHeight="33.0" prefWidth="215.0" text="List Menu">
                <font>
