--- a/client/src/main/resources/client/scenes/JoinBoard.fxml
+++ b/client/src/main/resources/client/scenes/JoinBoard.fxml
@@ -21,9 +21,9 @@
         <rowConstraints>
             <RowConstraints maxHeight="339.8000015258789" minHeight="10.0" prefHeight="210.9999755859375" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="339.8000015258789" minHeight="0.0" prefHeight="47.79998168945315" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="365.59998779296876" minHeight="10.0" prefHeight="78.20001220703125" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="373.99994812011715" minHeight="10.0" prefHeight="49.59996337890624" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="361.4" minHeight="10.0" prefHeight="215.20003662109372" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="365.59998779296876" minHeight="10.0" prefHeight="55.20001831054691" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="373.99994812011715" minHeight="10.0" prefHeight="69.5999816894531" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="361.4" minHeight="10.0" prefHeight="179.20001220703125" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
              <Label alignment="CENTER" text="Join board" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
@@ -31,7 +31,7 @@
                      <Font size="27.0" />
                  </font>
              </Label>
-             <TextField fx:id="boardKey" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="227.0" promptText="Board key" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+             <TextField fx:id="boardKey" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="30.0" prefWidth="227.0" promptText="Board key (case sensitive)" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </GridPane.margin></TextField>
@@ -45,6 +45,7 @@
                      <Font size="20.0" />
                  </font>
              </Button>
+            <Label fx:id="keyErrorLabel" alignment="CENTER" focusTraversable="false" text="Replace me with error message" textFill="RED" visible="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP" />
          </children>
       </GridPane>
     </children>
