Change the StartPage to accomodate for bigger board names

--- a/client/src/main/resources/client/scenes/StartPage.fxml
+++ b/client/src/main/resources/client/scenes/StartPage.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -15,49 +16,71 @@
    <children>
       <GridPane alignment="CENTER" layoutX="20.0" layoutY="26.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="580.8" minWidth="10.0" prefWidth="572.8" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.2000122070313" minWidth="10.0" prefWidth="168.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="180.20001831054688" minHeight="10.0" prefHeight="39.40000762939454" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="327.39999237060545" minHeight="10.0" prefHeight="327.39999237060545" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="180.20001831054688" minHeight="10.0" prefHeight="39.00000762939453" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="399.99999237060547" minHeight="10.0" prefHeight="399.99999237060547" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="76.0" prefWidth="179.0" text="Talio" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Label alignment="CENTER" prefHeight="76.0" prefWidth="179.0" text="Talio" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font name="Perpetua Bold" size="61.0" />
                </font>
             </Label>
-            <Button fx:id="loginAdmin" mnemonicParsing="false" onAction="#loginAsAdmin" prefHeight="52.0" prefWidth="211.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Log in as Admin" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+            <Button fx:id="loginAdmin" mnemonicParsing="false" onAction="#loginAsAdmin" prefHeight="52.0" prefWidth="163.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Admin Login" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <font>
                   <Font size="23.0" />
                </font>
                <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets left="20.0" right="20.0" />
                </GridPane.margin>
             </Button>
-            <VBox alignment="CENTER" prefHeight="214.0" prefWidth="242.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <VBox alignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <children>
                   <Label text="Boards">
                      <font>
                         <Font size="23.0" />
                      </font>
                   </Label>
-                  <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="270.0" prefWidth="254.0" vbarPolicy="ALWAYS">
+                  <ScrollPane fx:id="scrollPane" fitToWidth="true" vbarPolicy="ALWAYS">
                      <content>
-                        <VBox fx:id="boardList" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="266.0" prefWidth="277.0" />
+                        <VBox fx:id="boardList" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="311.0" prefWidth="538.0" />
                      </content>
                   </ScrollPane>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#joinNewBoard" prefHeight="52.0" prefWidth="98.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Join" textAlignment="CENTER">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#createNewBoard" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Create" textAlignment="CENTER">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </VBox>
-            <Label fx:id="adminLabel" alignment="CENTER" prefHeight="76.0" prefWidth="480.0" text="Admin Overview" visible="false" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Label fx:id="adminLabel" alignment="CENTER" prefHeight="76.0" prefWidth="480.0" text="Admin&#10;Overview" visible="false" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="25.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" onAction="#disconnect" prefHeight="52.0" prefWidth="211.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Disconnect" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+            <Button mnemonicParsing="false" onAction="#disconnect" prefHeight="52.0" prefWidth="149.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Disconnect" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <font>
                   <Font size="23.0" />
                </font>
@@ -65,30 +88,13 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#joinNewBoard" prefHeight="52.0" prefWidth="98.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Join" textAlignment="CENTER">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#createNewBoard" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Create" textAlignment="CENTER">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Button>
-               </children>
-            </VBox>
-            <Button fx:id="logoutAdmin" alignment="CENTER" mnemonicParsing="false" onAction="#logOutAdmin" prefHeight="52.0" prefWidth="241.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Log out from Admin" textAlignment="CENTER" visible="false" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+            <Button fx:id="logoutAdmin" alignment="CENTER" mnemonicParsing="false" onAction="#logOutAdmin" prefHeight="52.0" prefWidth="241.0" style="-fx-border-color: #86bccf; -fx-background-color: #cce7f0;" text="Admin Logout" textAlignment="CENTER" visible="false" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <font>
                   <Font size="23.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" right="10.0" />
+               </GridPane.margin>
             </Button>
          </children>
       </GridPane>
