--- a/client/src/main/resources/client/scenes/CardDetails.fxml
+++ b/client/src/main/resources/client/scenes/CardDetails.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardDetailsCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardDetailsCtrl">
     <children>
         <VBox spacing="10.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
             <children>
@@ -28,6 +28,7 @@
                         <Button mnemonicParsing="false" onAction="#closeCardDetails" text="⨯" />
                </children>
             </HBox>
+            <Label fx:id="nameErrorLabel" alignment="CENTER" focusTraversable="false" minHeight="24.0" minWidth="312.0" prefHeight="24.0" prefWidth="871.0" text="Replace me with error message" textFill="RED" visible="false" />
                 <Separator prefWidth="200.0" />
                 <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
                     <children>
