--- a/client/src/main/resources/client/scenes/TagDetails.fxml
+++ b/client/src/main/resources/client/scenes/TagDetails.fxml
@@ -6,14 +6,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="150.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.TagDetailsCtrl">
    <children>
-      <VBox prefHeight="150.0" prefWidth="215.0">
+      <VBox alignment="TOP_CENTER" prefHeight="260.0" prefWidth="216.0">
          <children>
             <Label alignment="CENTER" prefHeight="33.0" prefWidth="215.0" text="Tag Details">
                <font>
@@ -33,20 +32,24 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Label>
-            <HBox prefHeight="31.0" prefWidth="208.0">
-               <children>
-                  <TextField fx:id="nameTextField" prefHeight="25.0" prefWidth="143.0" promptText="Type title here...">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Button fx:id="nameChangeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Change">
-                     <HBox.margin>
-                        <Insets bottom="5.0" right="5.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
+            <TextField fx:id="nameTextField" prefHeight="25.0" prefWidth="143.0" promptText="Type title here...">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </TextField>
+            <Button fx:id="nameChangeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Change">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="tagErrorLabel" alignment="CENTER" focusTraversable="false" text="Replace me with error message" textFill="RED" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Label>
          </children>
       </VBox>
    </children>
